--- a/package.json
+++ b/package.json
@@ -20,17 +20,16 @@
     "three": "^0.150.1",
     "tone": "^14.7.77",
     "tweakpane": "^3.1.6",
-    "tweakpane-image-plugin": "^1.1.3"
+    "tweakpane-image-plugin": "^1.1.3",
+    "tomorrow_web": "^0.0.994"
   },
   "devDependencies": {
     "@theatre/studio": "0.6.0",
-    "@tweakpane/plugin-essentials": "^0.1.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/three": "^0.149.0",
     "@vitejs/plugin-react": "^3.1.0",
     "sass": "^1.58.3",
-    "tweakpane": "^3.1.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vite-plugin-glsl": "^1.1.2"
