--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "detect-gpu": "^5.0.14",
     "glsl-blend": "^1.0.3",
     "glsl-noise": "^0.0.0",
+    "gsap": "^3.11.5",
+    "layout-bmfont-text": "^1.3.4",
     "postprocessing": "^6.30.1",
+    "quad-indices": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.150.1",
     "tone": "^14.7.77",
     "tweakpane": "^3.1.6",
-    "tweakpane-image-plugin": "^1.1.3",
-    "tomorrow_web": "^0.0.994"
+    "tweakpane-image-plugin": "^1.1.3"
   },
   "devDependencies": {
     "@theatre/studio": "0.6.0",
