--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --fix -c .eslintrc --ignore-path .eslintignore src"
   },
   "dependencies": {
     "@theatre/core": "^0.6.0",
@@ -26,11 +27,32 @@
     "tweakpane-image-plugin": "^1.1.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
+    "@next/eslint-plugin-next": "^12.0.7",
     "@theatre/studio": "0.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/three": "^0.149.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-config-standard-react": "^9.2.0",
+    "eslint-plugin-flowtype": "^4.4.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-next": "^0.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.1",
+    "lint-staged": "^10.2.13",
+    "prettier": "2.7.1",
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
