--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
     "lint-staged": "^10.2.13",
+    "path": "^0.12.7",
     "prettier": "2.7.1",
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
