--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "quad-indices": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-spritesheet": "^2.3.9",
     "three": "^0.150.1",
     "tone": "^14.7.77",
     "tweakpane": "^3.1.6",
@@ -31,11 +32,11 @@
     "@commitlint/config-conventional": "^15.0.0",
     "@next/eslint-plugin-next": "^12.0.7",
     "@theatre/studio": "0.6.0",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/three": "^0.149.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "@vitejs/plugin-react": "^3.1.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
