--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --open",
     "build": "tsc && vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --open",
     "lint": "eslint --fix -c .eslintrc --ignore-path .eslintignore src"
   },
   "dependencies": {
@@ -21,7 +21,6 @@
     "quad-indices": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-responsive-spritesheet": "^2.3.9",
     "three": "^0.150.1",
     "tone": "^14.7.77",
     "tweakpane": "^3.1.6",
