fix(paths): localized

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,15 @@
     "strict": true,
     "target": "ESNext",
     "useDefineForClassFields": true,
+    "baseUrl": "./",
+    "paths": {
+      "@": [
+        "src"
+      ],
+      "@/*": [
+        "src/*"
+      ]
+    }
   },
   "include": [
     "src"
