--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@pangenerator/tweakpane-textarea-plugin": "^1.0.4",
     "@theatre/core": "^0.6.0",
     "@tweakpane/plugin-essentials": "^0.1.8",
+    "array-move": "^3.0.1",
     "detect-gpu": "^5.0.14",
+    "framer-motion": "4.1.17",
     "gsap": "^3.11.5",
     "layout-bmfont-text": "^1.3.4",
     "polyline-normals": "^2.0.2",
